--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular-socket-io": "~0.7.0",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "bootstrap": "~3.3.4"
   }
 }
