--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "angular-socket-io": "~0.7.0",
     "angular": "~1.3.15",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "lodash": "~3.8.0",
+    "fontawesome": "~4.3.0"
   }
 }
