--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
     "lodash": "~3.8.0",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "angular-animate": "~1.3.15"
   }
 }
