--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "bootstrap": "~3.3.4",
     "lodash": "~3.8.0",
     "fontawesome": "~4.3.0",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "angular-bootstrap": "~0.13.0"
   }
 }
