--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "lodash": "~3.8.0",
     "fontawesome": "~4.3.0",
     "angular-animate": "~1.3.15",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "angularjs-toaster": "~0.4.13"
   }
 }
